core/roboconf-core/src/test/resources/configurations/invalid/instanceof-invalid-property-2.instances
instance of server {
	name: server;
	configuration = master-slave;
}
